--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
