--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
